fixed freshbaked link not consistently working by editing z-index

--- a/src/app/css-styles/Header.module.css
+++ b/src/app/css-styles/Header.module.css
@@ -13,9 +13,7 @@
     height: 100px;
     width: 100%;
     left: 0;
-
-    z-index: 10;
-
+    z-index: 8;
 }
 
 .nbcu_logo {
@@ -155,21 +153,21 @@
         top: 140px; 
       }
       
-      .menu_item_2 {
+    .menu_item_2 {
         top: 245px; 
-      }
+    }
       
-      .menu_item_3 {
+    .menu_item_3 {
         top: 350px; 
-      }
+    }
       
-      .menu_item_4 {
+    .menu_item_4 {
         top: 455px; 
-      }
+    }
       
-      .menu_item_5 {
+    .menu_item_5 {
         top: 560px;
-      }
+    }
 }
 
 @media (max-width: 1050px) {
